chore(backend): event.java에서 deletedAt 필드 삭제